Added to custom aliases and bash